# lc79400_lc7940_graphical_lcd

./: Makefile  README.md  lcd.c  lcd.h
nrf/: image.c  lcd.c  main.c
nrf/support/: nrf.h  startup.c
rp2040/: CMakeLists.txt  README.md  image.h  lcd.c  lcd.h  lcd.pio  main.c
support/: nrf52.h  nrf52832_xxaa.ld  startup_config.h  system_nrf52.c
